# Groma

./: README.md  pyproject.toml
docs/: DATA.md  EVAL.md
groma/: constants.py  utils.py
groma/data/: build.py  collator.py  conversation.py
groma/data/configs/: det_pretrain.py  vl_finetune.py  vl_pretrain.py
groma/data/datasets/: coco.py  det_data.py  flickr.py  grit.py  groma.py  llava.py  lvis.py  refcoco_cap.py  refcoco_rec.py  visual_genome.py
groma/eval/: eval_cap.py  eval_gpt_review_visual.py  eval_lvis.py  eval_rec.py  model_refcocog.py  model_vg.py  model_vqa.py  run_ddetr.py  run_groma.py  summarize_gpt_review.py
groma/model/: ddetr.py  ddetr_transformer.py  groma.py  roi_align.py
groma/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  test_message.py
groma/train/: groma_trainer.py  train.py  train_det.py  train_mem.py
mmcv/: setup.py
mmcv/mmcv/ops/: multi_scale_deform_attn.py
mmdet/datasets/: __init__.py  objects365.py
mmdet/datasets/pipelines/: loading.py
scripts/: debug.sh  det_pretrain.sh  fsdp_config.json  vl_finetune.sh  vl_pretrain.sh
