[build-system]
requires = ["setuptools<67.0.0,>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groma"
version = "1.0.0"
description = "Grounded Multimodal Large Language Models."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "einops", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "requests", "sentencepiece", "tokenizers==0.12.1",
    "uvicorn", "shortuuid", "scipy", "pycocotools", "pycocoevalcap",
    "deepspeed==0.9.2", "peft==0.3.0", "terminaltables", "transformers==4.32.0",
    "bitsandbytes==0.43.1",
    "lvis @ git+https://github.com/lvis-dataset/lvis-api.git",
    "accelerate @ git+https://github.com/huggingface/accelerate@a2d8f540c3ab37c8f84d616be1300a0572b69cf8"
]

[project.urls]
"Homepage" = "https://groma-mllm.github.io/"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
